<resources>
    <string name="app_name">Lecture10_Rehber</string>

    <string name="btnVeritaniOlustur">Veritabanı Olustur</string>
    <string name="etAdi">Ad Soyad</string>
    <string name="etEmail">Email</string>
    <string name="etTelefon">Telefon Numarası</string>
    <string name="etNot">Not Ekle</string>

    <string name="btnEkle">Kaydet</string>
    <string name="svListele">Veriler Burada Listelenecek</string>
    <string name="btnListele">Listele</string>
    <string name="tvAdi">Adı</string>
    <string name="tvEmail">Email</string>
    <string name="tvTelefon">Telefon</string>
    <string name="tvNot">Not</string>
    <string name="btnGoster">Rehberi Görüntüle</string>
    <string name="tvEmailHint">ornek@email.com</string>
    <string name="tvTelefonHint">05326542365</string>
    <string name="btnDuzenle">Düzenle</string>
    <string name="btnSil">Sil</string>
    <string name="btnAra">Sil</string>
    <string name="title_activity_detay">DetayActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>