<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:id="@+id/llOn"
              tools:context=".MainActivity">

    <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:id="@+id/ivProfil"
            android:src="@drawable/ic_baseline_person_24"
            android:scaleType="centerCrop"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal|center_vertical"
            tools:ignore="DuplicateIds"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etAdi"
            android:id="@+id/etAdi"
            android:textSize="25sp"
            android:background="@drawable/et_sinir"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:inputType="textPersonName">
    </EditText>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etEmail"
            android:id="@+id/etEmail"
            android:textSize="25sp"
            android:background="@drawable/et_sinir"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:inputType="textPersonName">
    </EditText>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etTelefon"
            android:id="@+id/etTelefon"
            android:textSize="25sp"
            android:background="@drawable/et_sinir"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:inputType="number">
    </EditText>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etNot"
            android:id="@+id/etNot"
            android:textSize="25sp"
            android:background="@drawable/et_sinir"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:inputType="textPersonName"

    />

    <Button
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:id="@+id/btnEkle"
            android:text="@string/btnEkle"
            android:textSize="25sp"
            android:onClick="Ekle">
    </Button>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnGoster"
            android:text="@string/btnGoster"
            android:textSize="25sp"
            android:onClick="Goster">
    </Button>

</LinearLayout>